/*
Copyright (C) BABEC. All rights reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option java_package = "org.chainmaker.pb.common";
option go_package = "chainmaker.org/chainmaker-go/pb/protogo/common";

package common;

import "common/request.proto";

message MultiSignInfo {
    // trancation identifier
    string tx_id = 1;

    // transaction type in case of multiple signatures
    string tx_type = 2;

    // bytes of payload
    bytes payload_bytes = 3;

    // the height of the block to the deadline
    uint64 deadline_block = 4;

    // multi signature information
    repeated MultiSignVoteInfo voteInfos = 5;

    // status of mutil signature
    MultiSignStatus status = 6;
}

message MultiSignVoteInfo {
    // voting status
    VoteStatus vote = 1;

    // signature information
    EndorsementEntry endorsement = 2;
}

// voting status
enum VoteStatus {
    // disagree
    DISAGREE = 0;

    // agree
    AGREE = 1;
}

// Multi signature status
enum MultiSignStatus {
    // processing
    PROCESSING = 0;

    // adopted
    ADOPTED = 1;

    // refused
    REFUSED = 2;

    // expired
    EXPIRED = 3;
}

// mutil signature response message
message MultiSignResp {
    // transaction identifier
    string tx_id = 1;

    // payload hash
    string payload_hash = 2;
}